--- a/components/button/Button.css
+++ b/components/button/Button.css
@@ -1,6 +1,13 @@
 .button {
     padding: 10px 20px;
+    width: 100%;
     background-color: var(--secondary-bg-color);
     font-size: 20px;
     color: var(--main-bg-color);
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: #D16F00;
+    transition: all 300ms;
 }
